--- a/internal/site/src/locales/en/en.po
+++ b/internal/site/src/locales/en/en.po
@@ -168,6 +168,10 @@ msgstr "Average system-wide CPU utilization"
 msgid "Average utilization of {0}"
 msgstr "Average utilization of {0}"
 
+#: src/components/routes/system.tsx
+msgid "Average utilization of GPU engines"
+msgstr "Average utilization of GPU engines"
+
 #: src/components/command-palette.tsx
 #: src/components/navbar.tsx
 msgid "Backups"
@@ -570,6 +574,10 @@ msgstr "Full"
 #: src/components/routes/settings/layout.tsx
 msgid "General"
 msgstr "General"
+
+#: src/components/routes/system.tsx
+msgid "GPU Engines"
+msgstr "GPU Engines"
 
 #: src/components/routes/system.tsx
 msgid "GPU Power Draw"
@@ -1172,6 +1180,10 @@ msgstr "Value"
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
 msgstr "View"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "View more"
+msgstr "View more"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
