--- a/internal/site/src/locales/es/es.po
+++ b/internal/site/src/locales/es/es.po
@@ -173,6 +173,10 @@ msgstr "Utilización promedio de CPU del sistema"
 msgid "Average utilization of {0}"
 msgstr "Uso promedio de {0}"
 
+#: src/components/routes/system.tsx
+msgid "Average utilization of GPU engines"
+msgstr "Utilización promedio de motores GPU"
+
 #: src/components/command-palette.tsx
 #: src/components/navbar.tsx
 msgid "Backups"
@@ -575,6 +579,10 @@ msgstr "Llena"
 #: src/components/routes/settings/layout.tsx
 msgid "General"
 msgstr "General"
+
+#: src/components/routes/system.tsx
+msgid "GPU Engines"
+msgstr "Motores GPU"
 
 #: src/components/routes/system.tsx
 msgid "GPU Power Draw"
@@ -1177,6 +1185,10 @@ msgstr "Valor"
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
 msgstr "Vista"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "View more"
+msgstr "Ver más"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
