--- a/internal/site/src/locales/fr/fr.po
+++ b/internal/site/src/locales/fr/fr.po
@@ -173,6 +173,10 @@ msgstr "Utilisation moyenne du CPU à l'échelle du système"
 msgid "Average utilization of {0}"
 msgstr "Utilisation moyenne de {0}"
 
+#: src/components/routes/system.tsx
+msgid "Average utilization of GPU engines"
+msgstr "Utilisation moyenne des moteurs GPU"
+
 #: src/components/command-palette.tsx
 #: src/components/navbar.tsx
 msgid "Backups"
@@ -575,6 +579,10 @@ msgstr "Pleine"
 #: src/components/routes/settings/layout.tsx
 msgid "General"
 msgstr "Général"
+
+#: src/components/routes/system.tsx
+msgid "GPU Engines"
+msgstr "Moteurs GPU"
 
 #: src/components/routes/system.tsx
 msgid "GPU Power Draw"
@@ -1177,6 +1185,10 @@ msgstr ""
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
 msgstr "Vue"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "View more"
+msgstr "Voir plus"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
