--- a/internal/site/src/locales/hr/hr.po
+++ b/internal/site/src/locales/hr/hr.po
@@ -173,6 +173,10 @@ msgstr "Prosječna iskorištenost procesora na cijelom sustavu"
 msgid "Average utilization of {0}"
 msgstr ""
 
+#: src/components/routes/system.tsx
+msgid "Average utilization of GPU engines"
+msgstr "Prosječna iskorištenost GPU motora"
+
 #: src/components/command-palette.tsx
 #: src/components/navbar.tsx
 msgid "Backups"
@@ -575,6 +579,10 @@ msgstr "Puna"
 #: src/components/routes/settings/layout.tsx
 msgid "General"
 msgstr "Općenito"
+
+#: src/components/routes/system.tsx
+msgid "GPU Engines"
+msgstr "GPU motori"
 
 #: src/components/routes/system.tsx
 msgid "GPU Power Draw"
@@ -1177,6 +1185,10 @@ msgstr ""
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
 msgstr "Prikaz"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "View more"
+msgstr "Prikaži više"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
