--- a/internal/site/src/locales/hu/hu.po
+++ b/internal/site/src/locales/hu/hu.po
@@ -173,6 +173,10 @@ msgstr "Rendszerszintű CPU átlagos kihasználtság"
 msgid "Average utilization of {0}"
 msgstr "{0} átlagos kihasználtsága"
 
+#: src/components/routes/system.tsx
+msgid "Average utilization of GPU engines"
+msgstr "GPU motorok átlagos kihasználtsága"
+
 #: src/components/command-palette.tsx
 #: src/components/navbar.tsx
 msgid "Backups"
@@ -575,6 +579,10 @@ msgstr "Tele"
 #: src/components/routes/settings/layout.tsx
 msgid "General"
 msgstr "Általános"
+
+#: src/components/routes/system.tsx
+msgid "GPU Engines"
+msgstr "GPU motorok"
 
 #: src/components/routes/system.tsx
 msgid "GPU Power Draw"
@@ -1177,6 +1185,10 @@ msgstr ""
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
 msgstr "Nézet"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "View more"
+msgstr "Továbbiak megjelenítése"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
