--- a/internal/site/src/locales/it/it.po
+++ b/internal/site/src/locales/it/it.po
@@ -173,6 +173,10 @@ msgstr "Utilizzo medio della CPU a livello di sistema"
 msgid "Average utilization of {0}"
 msgstr "Utilizzo medio di {0}"
 
+#: src/components/routes/system.tsx
+msgid "Average utilization of GPU engines"
+msgstr "Utilizzo medio dei motori GPU"
+
 #: src/components/command-palette.tsx
 #: src/components/navbar.tsx
 msgid "Backups"
@@ -575,6 +579,10 @@ msgstr "Piena"
 #: src/components/routes/settings/layout.tsx
 msgid "General"
 msgstr "Generale"
+
+#: src/components/routes/system.tsx
+msgid "GPU Engines"
+msgstr "Motori GPU"
 
 #: src/components/routes/system.tsx
 msgid "GPU Power Draw"
@@ -1177,6 +1185,10 @@ msgstr "Valore"
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
 msgstr "Vista"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "View more"
+msgstr "Visualizza altro"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
