--- a/internal/site/src/locales/ru/ru.po
+++ b/internal/site/src/locales/ru/ru.po
@@ -173,6 +173,10 @@ msgstr "Среднее использование CPU по всей систем
 msgid "Average utilization of {0}"
 msgstr "Среднее использование {0}"
 
+#: src/components/routes/system.tsx
+msgid "Average utilization of GPU engines"
+msgstr "Средняя загрузка GPU движков"
+
 #: src/components/command-palette.tsx
 #: src/components/navbar.tsx
 msgid "Backups"
@@ -575,6 +579,10 @@ msgstr "Полная"
 #: src/components/routes/settings/layout.tsx
 msgid "General"
 msgstr "Общие"
+
+#: src/components/routes/system.tsx
+msgid "GPU Engines"
+msgstr "GPU движки"
 
 #: src/components/routes/system.tsx
 msgid "GPU Power Draw"
@@ -1177,6 +1185,10 @@ msgstr "Значение"
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
 msgstr "Вид"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "View more"
+msgstr "Показать больше"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
