--- a/internal/site/src/locales/uk/uk.po
+++ b/internal/site/src/locales/uk/uk.po
@@ -173,6 +173,10 @@ msgstr "Середнє використання CPU по всій системі
 msgid "Average utilization of {0}"
 msgstr "Середнє використання {0}"
 
+#: src/components/routes/system.tsx
+msgid "Average utilization of GPU engines"
+msgstr "Середнє використання рушіїв GPU"
+
 #: src/components/command-palette.tsx
 #: src/components/navbar.tsx
 msgid "Backups"
@@ -575,6 +579,10 @@ msgstr "Повна"
 #: src/components/routes/settings/layout.tsx
 msgid "General"
 msgstr "Загальні"
+
+#: src/components/routes/system.tsx
+msgid "GPU Engines"
+msgstr "Рушії GPU"
 
 #: src/components/routes/system.tsx
 msgid "GPU Power Draw"
@@ -1177,6 +1185,10 @@ msgstr "Значення"
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
 msgstr "Вигляд"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "View more"
+msgstr "Переглянути більше"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
