--- a/internal/site/src/locales/vi/vi.po
+++ b/internal/site/src/locales/vi/vi.po
@@ -173,6 +173,10 @@ msgstr "Sử dụng CPU trung bình toàn hệ thống"
 msgid "Average utilization of {0}"
 msgstr "Mức sử dụng trung bình của {0}"
 
+#: src/components/routes/system.tsx
+msgid "Average utilization of GPU engines"
+msgstr "Mức sử dụng trung bình của động cơ GPU"
+
 #: src/components/command-palette.tsx
 #: src/components/navbar.tsx
 msgid "Backups"
@@ -575,6 +579,10 @@ msgstr "Đầy pin"
 #: src/components/routes/settings/layout.tsx
 msgid "General"
 msgstr "Chung"
+
+#: src/components/routes/system.tsx
+msgid "GPU Engines"
+msgstr "Động cơ GPU"
 
 #: src/components/routes/system.tsx
 msgid "GPU Power Draw"
@@ -1177,6 +1185,10 @@ msgstr "Giá trị"
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
 msgstr "Xem"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "View more"
+msgstr "Xem thêm"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
