--- a/internal/site/src/locales/da/da.po
+++ b/internal/site/src/locales/da/da.po
@@ -49,6 +49,10 @@ msgid "1 min"
 msgstr ""
 
 #: src/lib/utils.ts
+msgid "1 minute"
+msgstr "1 minut"
+
+#: src/lib/utils.ts
 msgid "1 week"
 msgstr "1 uge"
 
