--- a/internal/site/src/locales/en/en.po
+++ b/internal/site/src/locales/en/en.po
@@ -44,6 +44,10 @@ msgid "1 min"
 msgstr "1 min"
 
 #: src/lib/utils.ts
+msgid "1 minute"
+msgstr "1 minute"
+
+#: src/lib/utils.ts
 msgid "1 week"
 msgstr "1 week"
 
