--- a/internal/site/src/locales/tr/tr.po
+++ b/internal/site/src/locales/tr/tr.po
@@ -49,6 +49,10 @@ msgid "1 min"
 msgstr "1 dk"
 
 #: src/lib/utils.ts
+msgid "1 minute"
+msgstr "1 dakika"
+
+#: src/lib/utils.ts
 msgid "1 week"
 msgstr "1 hafta"
 
