--- a/internal/site/src/locales/zh/zh.po
+++ b/internal/site/src/locales/zh/zh.po
@@ -49,6 +49,10 @@ msgid "1 min"
 msgstr "1 分鐘"
 
 #: src/lib/utils.ts
+msgid "1 minute"
+msgstr "1 分钟"
+
+#: src/lib/utils.ts
 msgid "1 week"
 msgstr "1週"
 
