--- a/internal/site/src/locales/hu/hu.po
+++ b/internal/site/src/locales/hu/hu.po
@@ -8,15 +8,15 @@ msgstr ""
 "Language: hu\n"
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-08-28 23:21\n"
+"PO-Revision-Date: 2025-10-14 23:40\n"
 "Last-Translator: \n"
 "Language-Team: Hungarian\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Crowdin-Project: beszel\n"
 "X-Crowdin-Project-ID: 733311\n"
 "X-Crowdin-Language: hu\n"
-"X-Crowdin-File: /main/beszel/site/src/locales/en/en.po\n"
-"X-Crowdin-File-ID: 16\n"
+"X-Crowdin-File: /main/internal/site/src/locales/en/en.po\n"
+"X-Crowdin-File-ID: 32\n"
 
 #. placeholder {0}: Math.trunc(system.info?.u / 86400)
 #: src/components/routes/system.tsx
@@ -31,13 +31,13 @@ msgstr "{0, plural, one {# óra} other {# óra}}"
 #. placeholder {0}: Math.trunc(system.info.u / 60)
 #: src/components/routes/system.tsx
 msgid "{0, plural, one {# minute} few {# minutes} many {# minutes} other {# minutes}}"
-msgstr ""
+msgstr "{0, plural, one {# perc} few {# perc} many {# perc} other {# perc}}"
 
 #. placeholder {0}: table.getFilteredSelectedRowModel().rows.length
 #. placeholder {1}: table.getFilteredRowModel().rows.length
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "{0} of {1} row(s) selected."
-msgstr ""
+msgstr "{0} a(z) {1} sorból kiválasztva."
 
 #: src/lib/utils.ts
 msgid "1 hour"
@@ -46,7 +46,11 @@ msgstr "1 óra"
 #. Load average
 #: src/components/charts/load-average-chart.tsx
 msgid "1 min"
-msgstr ""
+msgstr "1 perc"
+
+#: src/lib/utils.ts
+msgid "1 minute"
+msgstr "1 perc"
 
 #: src/lib/utils.ts
 msgid "1 minute"
@@ -63,7 +67,7 @@ msgstr "12 óra"
 #. Load average
 #: src/components/charts/load-average-chart.tsx
 msgid "15 min"
-msgstr ""
+msgstr "15 perc"
 
 #: src/lib/utils.ts
 msgid "24 hours"
@@ -76,7 +80,7 @@ msgstr "30 nap"
 #. Load average
 #: src/components/charts/load-average-chart.tsx
 msgid "5 min"
-msgstr ""
+msgstr "5 perc"
 
 #. Table column
 #: src/components/routes/settings/tokens-fingerprints.tsx
@@ -87,7 +91,7 @@ msgstr "Műveletek"
 #: src/components/alerts-history-columns.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Active"
-msgstr ""
+msgstr "Aktív"
 
 #: src/components/routes/home.tsx
 msgid "Active Alerts"
@@ -116,7 +120,7 @@ msgstr "Állítsa be a diagram megjelenítését."
 #: src/components/command-palette.tsx
 #: src/components/command-palette.tsx
 msgid "Admin"
-msgstr "Admin"
+msgstr "Adminisztráció"
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Agent"
@@ -126,7 +130,7 @@ msgstr "Ügynök"
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/routes/settings/layout.tsx
 msgid "Alert History"
-msgstr ""
+msgstr "Riasztási előzmények"
 
 #: src/components/alerts/alert-button.tsx
 #: src/components/alerts/alerts-sheet.tsx
@@ -145,7 +149,7 @@ msgstr "Biztosan törölni szeretnéd {name}-t?"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Are you sure?"
-msgstr ""
+msgstr "Biztos vagy benne?"
 
 #: src/components/copy-to-clipboard.tsx
 msgid "Automatic copy requires a secure context."
@@ -210,12 +214,12 @@ msgstr "Bináris"
 #: src/components/routes/settings/general.tsx
 #: src/components/routes/settings/general.tsx
 msgid "Bits (Kbps, Mbps, Gbps)"
-msgstr ""
+msgstr "Bitek (Kbps, Mbps, Gbps)"
 
 #: src/components/routes/settings/general.tsx
 #: src/components/routes/settings/general.tsx
 msgid "Bytes (KB/s, MB/s, GB/s)"
-msgstr ""
+msgstr "Byte-ok (KB/s, MB/s, GB/s)"
 
 #: src/components/charts/mem-chart.tsx
 msgid "Cache / Buffers"
@@ -232,11 +236,11 @@ msgstr "Figyelem - potenciális adatvesztés"
 
 #: src/components/routes/settings/general.tsx
 msgid "Celsius (°C)"
-msgstr ""
+msgstr "Celsius (°C)"
 
 #: src/components/routes/settings/general.tsx
 msgid "Change display units for metrics."
-msgstr ""
+msgstr "A mértékegységek megjelenítésének megváltoztatása."
 
 #: src/components/routes/settings/general.tsx
 msgid "Change general application options."
@@ -269,7 +273,7 @@ msgstr "Ellenőrizd az értesítési szolgáltatásodat"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Click on a system to view more information."
-msgstr ""
+msgstr "További információkért kattints egy rendszerre."
 
 #: src/components/ui/input-copy.tsx
 msgid "Click to copy"
@@ -291,7 +295,7 @@ msgstr "Jelszó megerősítése"
 
 #: src/components/routes/home.tsx
 msgid "Connection is down"
-msgstr ""
+msgstr "Kapcsolat megszakadt"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/systems-table/systems-table-columns.tsx
@@ -317,7 +321,7 @@ msgstr "Docker run másolása"
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgctxt "Environment variables"
 msgid "Copy env"
-msgstr ""
+msgstr "Környezet másolása"
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Copy host"
@@ -346,7 +350,7 @@ msgstr ""
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Copy YAML"
-msgstr ""
+msgstr "YAML másolása"
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "CPU"
@@ -365,7 +369,7 @@ msgstr "Fiók létrehozása"
 #. Context: date created
 #: src/components/alerts-history-columns.tsx
 msgid "Created"
-msgstr ""
+msgstr "Létrehozva"
 
 #: src/components/routes/settings/general.tsx
 msgid "Critical (%)"
@@ -400,7 +404,7 @@ msgstr "Törlés"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Delete fingerprint"
-msgstr ""
+msgstr "Ujjlenyomat törlése"
 
 #. Context: Battery state
 #: src/lib/i18n.ts
@@ -417,7 +421,7 @@ msgstr "Lemez I/O"
 
 #: src/components/routes/settings/general.tsx
 msgid "Disk unit"
-msgstr ""
+msgstr "Lemez mértékegysége"
 
 #: src/components/charts/disk-chart.tsx
 #: src/components/routes/system.tsx
@@ -451,11 +455,15 @@ msgstr "Dokumentáció"
 #: src/components/systems-table/systems-table-columns.tsx
 #: src/lib/alerts.ts
 msgid "Down"
-msgstr ""
+msgstr "Offline"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Down ({downSystemsLength})"
-msgstr ""
+msgstr "Offline ({downSystemsLength})"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "Download"
+msgstr "Letöltés"
 
 #: src/components/routes/system/network-sheet.tsx
 msgid "Download"
@@ -463,12 +471,12 @@ msgstr "Letöltés"
 
 #: src/components/alerts-history-columns.tsx
 msgid "Duration"
-msgstr ""
+msgstr "Időtartam"
 
 #: src/components/add-system.tsx
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Edit"
-msgstr ""
+msgstr "Szerkesztés"
 
 #: src/components/login/auth-form.tsx
 #: src/components/login/forgot-pass-form.tsx
@@ -518,7 +526,7 @@ msgstr "A <0>config.yml</0> fájlban nem definiált meglévő rendszerek törlé
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Export"
-msgstr ""
+msgstr "Exportálás"
 
 #: src/components/routes/settings/config-yaml.tsx
 msgid "Export configuration"
@@ -530,7 +538,7 @@ msgstr "Exportálja a jelenlegi rendszerkonfigurációt."
 
 #: src/components/routes/settings/general.tsx
 msgid "Fahrenheit (°F)"
-msgstr ""
+msgstr "Fahrenheit (°F)"
 
 #: src/lib/api.ts
 msgid "Failed to authenticate"
@@ -557,7 +565,7 @@ msgstr "Szűrő..."
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Fingerprint"
-msgstr ""
+msgstr "Ujjlenyomat"
 
 #: src/components/alerts/alerts-sheet.tsx
 msgid "For <0>{min}</0> {min, plural, one {minute} other {minutes}}"
@@ -634,24 +642,24 @@ msgstr "Elrendezés"
 
 #: src/components/routes/system.tsx
 msgid "Load Average"
-msgstr ""
+msgstr "Terhelési átlag"
 
 #: src/lib/alerts.ts
 msgid "Load Average 15m"
-msgstr ""
+msgstr "Terhelési átlag 15p"
 
 #: src/lib/alerts.ts
 msgid "Load Average 1m"
-msgstr ""
+msgstr "Terhelési átlag 1p"
 
 #: src/lib/alerts.ts
 msgid "Load Average 5m"
-msgstr ""
+msgstr "Terhelési átlag 5p"
 
 #. Short label for load average
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Load Avg"
-msgstr ""
+msgstr "Terhelési átlag"
 
 #: src/components/navbar.tsx
 msgid "Log Out"
@@ -682,7 +690,7 @@ msgstr "A megjelenítési és értesítési beállítások kezelése."
 #: src/components/add-system.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Manual setup instructions"
-msgstr ""
+msgstr "Manuális beállítási lépések"
 
 #. Chart select field. Please try to keep this short.
 #: src/components/routes/system.tsx
@@ -725,7 +733,7 @@ msgstr "Nyilvános interfészek hálózati forgalma"
 #. Context: Bytes or bits
 #: src/components/routes/settings/general.tsx
 msgid "Network unit"
-msgstr ""
+msgstr "Sávszélesség mértékegysége"
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -733,7 +741,7 @@ msgstr "Nincs találat."
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "No results."
-msgstr ""
+msgstr "Nincs találat."
 
 #: src/components/systems-table/systems-table.tsx
 #: src/components/systems-table/systems-table.tsx
@@ -780,7 +788,7 @@ msgstr "Oldal"
 #. placeholder {1}: table.getPageCount()
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Page {0} of {1}"
-msgstr ""
+msgstr "{0}/{1} oldal"
 
 #: src/components/command-palette.tsx
 msgid "Pages / Settings"
@@ -797,7 +805,7 @@ msgstr "A jelszónak legalább 8 karakternek kell lennie."
 
 #: src/components/login/auth-form.tsx
 msgid "Password must be less than 72 bytes."
-msgstr ""
+msgstr "A jelszó legfeljebb 72 byte lehet."
 
 #: src/components/login/forgot-pass-form.tsx
 msgid "Password reset request received"
@@ -813,7 +821,7 @@ msgstr "Szüneteltetve"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Paused ({pausedSystemsLength})"
-msgstr ""
+msgstr "Szüneteltetve ({pausedSystemsLength})"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
@@ -892,7 +900,7 @@ msgstr "Jelszó visszaállítása"
 #: src/components/alerts-history-columns.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Resolved"
-msgstr ""
+msgstr "Megoldva"
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Resume"
@@ -900,11 +908,11 @@ msgstr "Folytatás"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Rotate token"
-msgstr ""
+msgstr "Tokenváltás"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Rows per page"
-msgstr ""
+msgstr "Sorok száma oldalanként"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Save address using enter key or comma. Leave blank to disable email notifications."
@@ -917,7 +925,7 @@ msgstr "Beállítások mentése"
 
 #: src/components/add-system.tsx
 msgid "Save system"
-msgstr ""
+msgstr "Rendszer mentése"
 
 #: src/components/navbar.tsx
 msgid "Search"
@@ -965,7 +973,7 @@ msgstr "Rendezés"
 #. Context: alert state (active or resolved)
 #: src/components/alerts-history-columns.tsx
 msgid "State"
-msgstr ""
+msgstr "Állapot"
 
 #: src/components/systems-table/systems-table.tsx
 #: src/lib/alerts.ts
@@ -989,7 +997,7 @@ msgstr "Rendszer"
 
 #: src/components/routes/system.tsx
 msgid "System load averages over time"
-msgstr ""
+msgstr "Rendszer terhelési átlaga"
 
 #: src/components/navbar.tsx
 msgid "Systems"
@@ -1006,7 +1014,7 @@ msgstr "Tábla"
 #. Temperature label in systems table
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Temp"
-msgstr ""
+msgstr "Hőmérséklet"
 
 #: src/components/routes/system.tsx
 #: src/lib/alerts.ts
@@ -1015,7 +1023,7 @@ msgstr "Hőmérséklet"
 
 #: src/components/routes/settings/general.tsx
 msgid "Temperature unit"
-msgstr ""
+msgstr "Hőmérséklet mértékegysége"
 
 #: src/components/routes/system.tsx
 msgid "Temperatures of system sensors"
@@ -1039,7 +1047,7 @@ msgstr "Ezt a műveletet nem lehet visszavonni! Véglegesen törli a {name} öss
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "This will permanently delete all selected records from the database."
-msgstr ""
+msgstr "Ez véglegesen törli az összes kijelölt bejegyzést az adatbázisból."
 
 #: src/components/routes/system.tsx
 msgid "Throughput of {extraFsName}"
@@ -1069,13 +1077,13 @@ msgstr "Téma váltása"
 #: src/components/add-system.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Token"
-msgstr ""
+msgstr "Token"
 
 #: src/components/command-palette.tsx
 #: src/components/routes/settings/layout.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Tokens & Fingerprints"
-msgstr ""
+msgstr "Tokenek & Ujjlenyomatok"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Tokens allow agents to connect and register. Fingerprints are stable identifiers unique to each system, set on first connection."
@@ -1095,15 +1103,15 @@ msgstr "Összes elküldött adat minden interfészenként"
 
 #: src/lib/alerts.ts
 msgid "Triggers when 1 minute load average exceeds a threshold"
-msgstr ""
+msgstr "Riaszt, ha az 1 perces terhelési átlag túllép egy küszöbértéket"
 
 #: src/lib/alerts.ts
 msgid "Triggers when 15 minute load average exceeds a threshold"
-msgstr ""
+msgstr "Riaszt, ha a 15 perces terhelési átlag túllép egy küszöbértéket"
 
 #: src/lib/alerts.ts
 msgid "Triggers when 5 minute load average exceeds a threshold"
-msgstr ""
+msgstr "Riaszt, ha az 5 perces terhelési átlag túllép egy küszöbértéket"
 
 #: src/lib/alerts.ts
 msgid "Triggers when any sensor exceeds a threshold"
@@ -1132,12 +1140,12 @@ msgstr "Bekapcsol, ha a lemez érzékelő túllép egy küszöbértéket"
 #. Temperature / network units
 #: src/components/routes/settings/general.tsx
 msgid "Unit preferences"
-msgstr ""
+msgstr "Mértékegység beállítások"
 
 #: src/components/command-palette.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Universal token"
-msgstr ""
+msgstr "Univerzális token"
 
 #. Context: Battery state
 #: src/lib/i18n.ts
@@ -1148,11 +1156,15 @@ msgstr "Ismeretlen"
 #: src/components/routes/system.tsx
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Up"
-msgstr ""
+msgstr "Online"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Up ({upSystemsLength})"
-msgstr ""
+msgstr "Online ({upSystemsLength})"
+
+#: src/components/routes/system/network-sheet.tsx
+msgid "Upload"
+msgstr "Feltöltés"
 
 #: src/components/routes/system/network-sheet.tsx
 msgid "Upload"
@@ -1185,7 +1197,7 @@ msgstr "Felhasználók"
 
 #: src/components/alerts-history-columns.tsx
 msgid "Value"
-msgstr ""
+msgstr "Érték"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "View"
@@ -1197,7 +1209,7 @@ msgstr "Továbbiak megjelenítése"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
-msgstr ""
+msgstr "Legfrissebb 200 riasztásod áttekintése."
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Visible Fields"
@@ -1250,3 +1262,4 @@ msgstr "YAML konfiguráció"
 #: src/components/routes/settings/layout.tsx
 msgid "Your user settings have been updated."
 msgstr "A felhasználói beállítások frissítésre kerültek."
+
